--- a/templates/main/user_register.html
+++ b/templates/main/user_register.html
@@ -409,21 +409,19 @@ document.addEventListener('DOMContentLoaded', function() {
             // Ограничиваем длину до 11 цифр
             value = value.substring(0, 11);
             
-            // Применяем маску 7(XXX)-XXX-XXXX
+            // Применяем маску 7(123)-123-1233
             let formattedValue = '';
-            if (value.length > 0) {
-                formattedValue = '7';
-                if (value.length > 1) {
-                    formattedValue += '(' + value.substring(1, 4);
-                    if (value.length > 4) {
-                        formattedValue += ')-' + value.substring(4, 7);
-                        if (value.length > 7) {
-                            formattedValue += '-' + value.substring(7, 11);
-                        }
-                    } else if (value.length === 4) {
-                        formattedValue += ')';
-                    }
-                }
+            if (value.length === 0) {
+                formattedValue = '';
+            } else if (value.length <= 1) {
+                formattedValue = value;
+            } else if (value.length <= 4) {
+                formattedValue = value.slice(0, 1) + '(' + value.slice(1);
+            } else if (value.length <= 7) {
+                formattedValue = value.slice(0, 1) + '(' + value.slice(1, 4) + ')-' + value.slice(4);
+            } else {
+                formattedValue = value.slice(0, 1) + '(' + value.slice(1, 4) + ')-' + 
+                                value.slice(4, 7) + '-' + value.slice(7, 11);
             }
             
             e.target.value = formattedValue;
